--- a/templates/puma/puma.conf
+++ b/templates/puma/puma.conf
@@ -40,6 +40,9 @@ script
 exec /bin/bash <<'EOT'
   # set HOME to the setuid user's home, there doesn't seem to be a better, portable way
   export HOME="$(eval echo ~$(id -un))"
+  export PUMA_WORKERS=1
+  export PUMA_THREADS=5
+  export RACK_ENV="production"
 
   if [ -d "/usr/local/rbenv/bin" ]; then
     export PATH="/usr/local/rbenv/bin:/usr/local/rbenv/shims:$PATH"
