--- a/templates/nginx/nginx.conf
+++ b/templates/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream app {
-    server unix:/home/deploy/<%= @app_name %>/shared/sockets/puma.sock fail_timeout=0;
+    server unix:/home/deploy/<%= @app_name %>/shared/tmp/sockets/puma.sock fail_timeout=0;
 }
 
 server {
