added nginx conf template for ssl with letsencrypt

--- a/templates/nginx/nginx-ssl.conf
+++ b/templates/nginx/nginx-ssl.conf
@@ -3,12 +3,15 @@ upstream app {
 }
 
 server {
-    listen 80;
+    listen 443 ssl;
     server_name <%= @server_name %> www.<%= @server_name %>;
 
     root /home/deploy/<%= @app_name %>/current/public;
 
     try_files $uri/index.html $uri @app;
+
+    ssl_certificate /etc/letsencrypt/live/<%= @server_name %>/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/<%= @server_name %>/privkey.pem;
 
     location @app {
         proxy_pass http://app;
@@ -20,4 +23,10 @@ server {
     error_page 500 502 503 504 /500.html;
     client_max_body_size 4G;
     keepalive_timeout 10;
+}
+
+server {
+  listen 80;
+  server_name <%= @server_name %> www.<%= @server_name %>;
+  return 301 https://$host$request_uri;
 }
